// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a new todo 1`] = `
<TodoList>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    />
  </div>
</TodoList>
`;

exports[`should add a new todo 2`] = `
<TodoList>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    />
  </div>
</TodoList>
`;

exports[`should display todos passed to it 1`] = `
<TodoList
  todos={
    Array [
      Object {
        "done": false,
        "title": "zagzag",
      },
    ]
  }
>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    >
      <Component
        key="0"
        removeTodo={[Function]}
        todo={
          Object {
            "done": false,
            "title": "zagzag",
          }
        }
        toggleTodo={[Function]}
      >
        <li
          className="todo"
        >
          zagzag
          <button
            className="remove"
            onClick={[Function]}
          >
            delete
          </button>
          <button
            className="toggle"
            onClick={[Function]}
          >
            done
          </button>
        </li>
      </Component>
    </ul>
  </div>
</TodoList>
`;

exports[`should remove a todo 1`] = `
<TodoList
  todos={
    Array [
      Object {
        "done": false,
        "title": "toRemove",
      },
      Object {
        "done": false,
        "title": "gaga",
      },
    ]
  }
>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    >
      <Component
        key="0"
        removeTodo={[Function]}
        todo={
          Object {
            "done": false,
            "title": "toRemove",
          }
        }
        toggleTodo={[Function]}
      >
        <li
          className="todo"
        >
          toRemove
          <button
            className="remove"
            onClick={[Function]}
          >
            delete
          </button>
          <button
            className="toggle"
            onClick={[Function]}
          >
            done
          </button>
        </li>
      </Component>
      <Component
        key="1"
        removeTodo={[Function]}
        todo={
          Object {
            "done": false,
            "title": "gaga",
          }
        }
        toggleTodo={[Function]}
      >
        <li
          className="todo"
        >
          gaga
          <button
            className="remove"
            onClick={[Function]}
          >
            delete
          </button>
          <button
            className="toggle"
            onClick={[Function]}
          >
            done
          </button>
        </li>
      </Component>
    </ul>
  </div>
</TodoList>
`;

exports[`should remove a todo 2`] = `
<TodoList
  todos={
    Array [
      Object {
        "done": false,
        "title": "toRemove",
      },
      Object {
        "done": false,
        "title": "gaga",
      },
    ]
  }
>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    >
      <Component
        key="0"
        removeTodo={[Function]}
        todo={
          Object {
            "done": false,
            "title": "gaga",
          }
        }
        toggleTodo={[Function]}
      >
        <li
          className="todo"
        >
          gaga
          <button
            className="remove"
            onClick={[Function]}
          >
            delete
          </button>
          <button
            className="toggle"
            onClick={[Function]}
          >
            done
          </button>
        </li>
      </Component>
    </ul>
  </div>
</TodoList>
`;

exports[`should render todo list 1`] = `
<div>
  <input
    className="new-todo-input"
    onKeyDown={[Function]}
    type="text"
  />
  <ul
    className="todos"
  />
</div>
`;

exports[`should toggle a todo 1`] = `
<TodoList
  todos={
    Array [
      Object {
        "done": false,
        "title": "toToggle",
      },
      Object {
        "done": false,
        "title": "gaga",
      },
    ]
  }
>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    >
      <Component
        key="0"
        removeTodo={[Function]}
        todo={
          Object {
            "done": false,
            "title": "toToggle",
          }
        }
        toggleTodo={[Function]}
      >
        <li
          className="todo"
        >
          toToggle
          <button
            className="remove"
            onClick={[Function]}
          >
            delete
          </button>
          <button
            className="toggle"
            onClick={[Function]}
          >
            done
          </button>
        </li>
      </Component>
      <Component
        key="1"
        removeTodo={[Function]}
        todo={
          Object {
            "done": false,
            "title": "gaga",
          }
        }
        toggleTodo={[Function]}
      >
        <li
          className="todo"
        >
          gaga
          <button
            className="remove"
            onClick={[Function]}
          >
            delete
          </button>
          <button
            className="toggle"
            onClick={[Function]}
          >
            done
          </button>
        </li>
      </Component>
    </ul>
  </div>
</TodoList>
`;

exports[`should toggle a todo 2`] = `
<TodoList
  todos={
    Array [
      Object {
        "done": false,
        "title": "toToggle",
      },
      Object {
        "done": false,
        "title": "gaga",
      },
    ]
  }
>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    >
      <Component
        key="0"
        removeTodo={[Function]}
        todo={
          Object {
            "done": false,
            "title": "toToggle",
          }
        }
        toggleTodo={[Function]}
      >
        <li
          className="todo"
        >
          toToggle
          <button
            className="remove"
            onClick={[Function]}
          >
            delete
          </button>
          <button
            className="toggle"
            onClick={[Function]}
          >
            done
          </button>
        </li>
      </Component>
      <Component
        key="1"
        removeTodo={[Function]}
        todo={
          Object {
            "done": false,
            "title": "gaga",
          }
        }
        toggleTodo={[Function]}
      >
        <li
          className="todo"
        >
          gaga
          <button
            className="remove"
            onClick={[Function]}
          >
            delete
          </button>
          <button
            className="toggle"
            onClick={[Function]}
          >
            done
          </button>
        </li>
      </Component>
    </ul>
  </div>
</TodoList>
`;
